import React from "react";
import { render, screen, fireEvent, createEvent } from "@testing-library/react"

import { CellState, Coords } from "@/helpers/Field";

import { Cell, ClosedFrame , CellProps, isActiveCell } from "./Cell";

describe('Cell component check', () => {
    const coords: Coords = [1,1];

    for (let cell = CellState.empty; cell <= CellState.weakFlag; cell++) {
        it('Cell renders correctly', () => {
            const args = {
                coords,
                onClick: jest.fn(),
                oncontextmenu: jest.fn()
            } as unknown as CellProps;
        
            const { asFragment } = render(<Cell {...args}>{cell}</Cell>);
        
            expect(asFragment()).toMatchSnapshot();
        });
        it('Closed Frame renders correctly', () => {
            const { asFragment } = render(<ClosedFrame mouseDown={true} />);
            expect(asFragment()).toMatchSnapshot();
        });
        it('Check prevent default contextMenu for every type of cell', () => {
            const props = {
                coords,
                onClick: jest.fn(),
                onContextMenu: jest.fn(),
            };

            render(<Cell {...props}>{cell}</Cell>)

            const cellComp = screen.getByTestId(`${cell}_${coords}`);
            
            const contextMenuEvent = createEvent.contextMenu(cellComp)
            fireEvent(cellComp, contextMenuEvent);

            expect(contextMenuEvent.defaultPrevented).toBe(true);
        });
        it('onClick and onContextMenu handler should be called for active cells', () => {
            const props = {
                coords,
                onClick: jest.fn(),
                onContextMenu: jest.fn(),
            };

            render(<Cell {...props}>{cell}</Cell>);

            const cellComp = screen.getByTestId(`${cell}_${coords}`);

            fireEvent.click(cellComp);
            fireEvent.contextMenu(cellComp);

            if(isActiveCell(cell)){
                expect(props.onClick).toBeCalled();
                expect(props.onContextMenu).toBeCalled();
            } else {
                expect(props.onClick).not.toBeCalled();
                expect(props.onContextMenu).not.toBeCalled();
            }

        });
    }
});